Fix inconsistent height of homepage's toolbar on dark mode

--- a/src/app/features/home/capture-tab/uploading-bar/uploading-bar.component.scss
+++ b/src/app/features/home/capture-tab/uploading-bar/uploading-bar.component.scss
@@ -21,6 +21,10 @@
   }
 }
 
+#thin-upload-bar {
+  height: 32px;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
